[project]

description = "Coreff (COmpany REFerences)"
name = "Coreff"

classifiers = ["Framework :: Odoo", "Programming Language :: Python :: 3"]

requires-python = ">=3.7"

dependencies = ["zeep"]

[tool.black]
line-length = 79

[tool.pylint.'MASTER']
[MASTER]
ignore = ["tests", "README.md", "pyproject.toml", "requirements.txt"]
