[project]

description = "Coreff (COmpany REFerences)"
name = "Coreff"

classifiers = ["Framework :: Odoo", "Programming Language :: Python :: 3"]

requires-python = ">=3.7"

dependencies = ["zeep"]

[tool.black]
line-length = 79

[tool.flake8]
exclude = ["./.git", "./tests"]
max-line-length = 79
per-file-ignores = ['__init__.py:F401']

[tool.pylint.'MASTER']
ignore = ["tests", "README.md", "pyproject.toml", "requirements.txt"]
max-line-length = 79
