[project]

description = "Coreff (COmpany REFerences)"
name = "Coreff"

classifiers = ["Framework :: Odoo", "Programming Language :: Python :: 3"]

requires-python = ">=3.7"

dependencies = ["zeep"]

[tool.black]
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.mypy_cache
  | ^/pyproject\.toml
  | ^/README\.md
  | ^/.*\.txt
)/
'''
line-length = 79
target-version = ['py36', 'py37', 'py38', 'py39']

[tool.flake8]
exclude = ["./.git", "./tests"]
max-line-length = 79
per-file-ignores = ['__init__.py:F401']

[tool.pylint.'MASTER']
ignore = ["tests", "README.md", "pyproject.toml", "requirements.txt", "oca_dependencies.txt"]
load-plugins = ["pylint_odoo"]
max-line-length = 79

[tool.pylint.'ODOOLINT']
license_allowed = ["AGPL-3", "GPL-2", "GPL-2 or any later version", "GPL-3", "GPL-3 or any later version", "LGPL-3"]
manifest_required_authors = ["Article714"]
manifest_required_keys = "license"
readme_template_url = "https://github.com/OCA/maintainer-tools/blob/master/template/module/README.rst"
valid_odoo_versions = ["12.0", "14.0", "15.0", "16.0"]

[tool.pylint.'MESSAGES CONTROL']
disable = ["all"]
enable = [
  "anomalous-backslash-in-string",
  "api-one-deprecated",
  "api-one-multi-together",
  "assignment-from-none",
  "attribute-deprecated",
  "class-camelcase",
  "dangerous-default-value",
  "dangerous-view-replace-wo-priority",
  "development-status-allowed",
  "duplicate-id-csv",
  "duplicate-key",
  "duplicate-xml-fields",
  "duplicate-xml-record-id",
  "eval-referenced",
  "eval-used",
  "incoherent-interpreter-exec-perm",
  "license-allowed",
  "manifest-author-string",
  "manifest-deprecated-key",
  "manifest-required-key",
  "manifest-version-format",
  "method-compute",
  "method-inverse",
  "method-required-super",
  "method-search",
  "openerp-exception-warning",
  "pointless-statement",
  "pointless-string-statement",
  "print-used",
  "redundant-keyword-arg",
  "redundant-modulename-xml",
  "reimported",
  "relative-import",
  "return-in-init",
  "rst-syntax-error",
  "sql-injection",
  "too-few-format-args",
  "translation-field",
  "translation-required",
  "unreachable",
  "use-vim-comment",
  "wrong-tabs-instead-of-spaces",
  "xml-syntax-error",
]
manifest_deprecated_keys = ["description", "active"]
